Pre-Deploy Configuration

--- a/build.xml
+++ b/build.xml
@@ -37,8 +37,8 @@
         <property name="lib.dir" value="WebContent/WEB-INF/lib" />
         <property name="web.dir" value="." />
         <property name="webcontent.dir" value="WebContent" />
-    	<property name="wsdlStorage" value="http://127.0.1.1:6903/ws/storage?wsdl"/>  
-    	<property name="wsdlLogic" value="http://127.0.1.1:6904/ws/business?wsdl"/>     
+    	<property name="wsdlStorage" value="https://virtual-lifecoach-storage.herokuapp.com/ws/storage?wsdl"/>  
+    	<property name="wsdlLogic" value="https://virtual-lifecoach-business.herokuapp.com/ws/business?wsdl"/>     
         <!-- ================================= 
 	          target: resolve downloads the dependencies to your lib folder              
 	         ================================= -->
